src/App.css
/* ... */
/* MESSAGE */

.message-container {
  margin: .5em;
  font-size: .85rem;
  text-transform: lowercase;
  display: flex;
  align-items: flex-start;
  gap: .3em;
  word-break: break-word;
}

.message-content {
  padding: 1em;
  border-radius: 15px;
  max-width: 300px;
  word-break: break-word;
  background: var(--light-green);
}

.message-img {
  max-width: 300px;
  border-radius: 15px;
}

/* POST */

.post-container {
  border-top: 15px solid var(--light-green);
  border-bottom: 0;
  width: 100%;
  display: flex;
  flex-direction: column;
  padding: 1em;
}

.post-container:last-child {
  border-bottom: 15px solid var(--light-green);
  margin-bottom: 4em;
}

.post-container:first-child {
  border-top: 0;
}

/* POST HEADER */

.post-header-container {
  display: flex; 
  align-items: flex-start;
  gap: 8px;
  cursor: pointer;
  color: var(--dark-green);
}

/* POST CONTENT */

.post-content {
  flex: 1;
  padding: 8px 0;
  padding-bottom: 0;
  word-wrap: break-word;
  overflow-wrap: break-word;
  white-space: normal; /* allows wrapping */
}

/* POST ACTIONS */

.post-actions {
  margin-top: auto;
  color: var(--dark-green);
  display: flex;
  align-items: flex-end;
  justify-content: space-between;

}

.post-actions svg {
    width: 30px;
  }

.post-actions button {
  padding: 0;
}

.post-actions-buttons {
  display: flex;
  gap: .5em; 

}

/* COMMENTS */

.comments-container { 
  position: relative;
  height: 100%;
  display: flex;
  flex-direction: column;
}

.comments-box {
  height: 500px;
  overflow-y: auto;
  padding: 1em;
}

.comments-form {
  display: flex;
  flex-direction: column-reverse;
  background: #eaf4f0;
  padding: .5em 0;
}

.comments-form-icons-container {
  display: flex;
  align-items: center;
  width: 50%;
  gap: .3em;
  padding-right: 1em;
}

/* COMMENT */

.comment-container {
  display: flex; 
  align-items: flex-start;
  gap: .3em;
  margin-bottom: 1em;
}

.comment-content {
  border-radius: 10px;
  padding: .5em;
  width: 60%;
  display: flex;
  flex-direction: column;
}

.reply-content {
  width: 80%; 
  margin-left: 2em;
}

.comment-content-image {
  width: 100px;
}

/* CHAT ITEM */

.chat-item-container {
  border-bottom: 2px solid var(--light-green);
  padding: 1em 0; 
  cursor: pointer;
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  gap: .5em;
  margin: 0 1em;
}

.chat-item-content {
  font-size: .8rem;
  word-break: break-all;
}

.chat-item-time {
  color: #4b896f;
  font-size: .7rem;
  margin-left: auto;
}

/* USERS LIST */

.users-list-container {
  padding: 1em;
  display: flex;
  flex-direction: column;
  gap: 1em;
  border-left: 2px solid var(--light-green);

  position: fixed;
  top: 0;
  right: 0;
  height: 100%;
  width: 29.8%;
}

.user-item {
  display: flex;
  align-items: center;
  gap: .5em;
}

.users-search-infinite {
  height: 500px;
  overflow-y: auto;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

.users-search-infinite::-webkit-scrollbar {
  width: 0 !important;
}


/* USER CARD */

.user-card-container {
  padding: .5em 0;
  padding-right: .5em;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: .5em;
  border-bottom: 2px solid var(--light-green);
}

.user-item-infos {
  display: flex;
  align-items: center; 
  gap: .3em;
}

/* LINK PREVIEW */

.link-preview-container {
  border-radius: 15px;
  padding: 0 0 1em;
  background: var(--light-green);
  color: var(--dark-green);
  margin-top: 8px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  position: relative;
}

/* IMAGE PREVIEW */

.image-preview {
  width: 60px; 
  height: 60px; 
  position: relative;
  margin: .5em;
}

.image-preview-img {
  height: 100%;
  object-fit: cover; 
  object-position: top;
}

.image-preview-btn {
  position: absolute;
  top: -12%;
  right: -12%;
  background-color: rgba(75, 137, 111, .4);
  border-radius: 50%;
  padding: .3em;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

/* USER PROFILE IMAGE */

.user-img {
  border-radius: 50%;
  object-fit: cover;
  object-position: center;
}

.user-img-big {
  width: 100px;
  height: 100px;
}

.user-img-medium {
  width: 45px;
  height: 45px;
}

.user-img-small {
  width: 30px;
  height: 30px;
}

.user-img-extra-small {
  width: 20px;
  height: 20px;
}

.online-indicator {
  position: absolute;
  bottom: 0;
  right: 0;
  transform: translate(15%, 15%); 
  width: 18px;
  height: 18px;
  background-color: rgb(0, 190, 95);
  border: 3px solid white; 
  border-radius: 50%;
}

/* JOIN POP UP */

.join-popup-container {
  color: #000; 
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1em;
}

.join-button {
  font-size: 1rem; 
  padding: .7em 1.2em; 
  border-radius: 30px;
  background-color: var(--light-green);
}

/* POP UP */

.pop-up-container {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background-color: rgba(75, 137, 111, .6);
  opacity: 1;
  z-index: 9999;
}

.pop-up-box {
  position: fixed;
  top: 50%;
  left: 50%;
  width: 50%;
  z-index: 8888;
  height: 70%;
  background: var(--light);
  border-radius: 15px;
  transform: translate(-50%, -50%);
  display: flex;
  flex-direction: column;
}

.close-pop-up-button {
  position: absolute;
  top: 1em;
  right: 1em;
  color: #4b896f;
  padding: 0;
}


/*=======SKELETON=======*/

.skeleton {
  animation: pulse 1.5s infinite ease-in-out;
}

@keyframes pulse {
  0% { opacity: 0.3; }
  50% { opacity: 1; }
  100% { opacity: 0.3; }
}

/*========ERRORS=========*/

.fullscreen-error {
  background-color: rgba(75, 137, 111, .4);
  width: 100%;
  height: 100vh;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 9999;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
} 

.inline-error {
  width: 100%;
  height: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: var(--dark);
}
/* ... */

